[gd_scene load_steps=16 format=3 uid="uid://dcoeu7r8dkoua"]

[ext_resource type="Script" uid="uid://64unx1tbeqqi" path="res://scripts/combat_3.gd" id="1_2134e"]
[ext_resource type="Texture2D" uid="uid://l4ekdijcsqge" path="res://assets/New Piskel.png" id="2_o6w0h"]
[ext_resource type="Texture2D" uid="uid://babtw7indt8p3" path="res://assets/texbox bottom.png" id="4_08wbh"]
[ext_resource type="Texture2D" uid="uid://7bkl4h48n0sw" path="res://assets/textbox up (1).png" id="5_k2ix8"]
[ext_resource type="FontFile" uid="uid://b600u7e6i3f47" path="res://assets/PressStart2P-vaV7.ttf" id="6_o2ifi"]
[ext_resource type="Texture2D" uid="uid://3k3uvoo0fqf6" path="res://assets/heart (1).png" id="7_diuud"]
[ext_resource type="Texture2D" uid="uid://bhpm6lkpy8u7b" path="res://assets/card2-defend (1).png" id="8_mx7f0"]
[ext_resource type="Texture2D" uid="uid://daho32g7g5wvm" path="res://assets/mana (1).png" id="9_v2ynp"]
[ext_resource type="PackedScene" uid="uid://whl7acuiflf5" path="res://scenes/cardslot_1.tscn" id="10_cglk2"]
[ext_resource type="Script" uid="uid://dq8ethuk8u27q" path="res://scripts/end_turn_button.gd" id="11_j4yij"]
[ext_resource type="PackedScene" uid="uid://cnn7fwpygqsak" path="res://scenes/enemy3.tscn" id="12_2134e"]
[ext_resource type="Texture2D" uid="uid://b437kgkwriqjh" path="res://assets/thinking.png" id="12_he2jp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m3o6r"]
size = Vector2(256, 68)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s2f5b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2134e"]
size = Vector2(26, 26)

[node name="combat" type="Node2D"]
script = ExtResource("1_2134e")

[node name="background" type="Sprite2D" parent="."]
modulate = Color(0.54099, 0.54099, 0.54099, 1)
position = Vector2(125, 7)
scale = Vector2(1.05078, 1.38542)
texture = ExtResource("2_o6w0h")
metadata/_edit_lock_ = true

[node name="TexboxBottom" type="Sprite2D" parent="."]
position = Vector2(128, 120)
texture = ExtResource("4_08wbh")
metadata/_edit_lock_ = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TextboxUp" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(128, 12)
texture = ExtResource("5_k2ix8")
metadata/_edit_lock_ = true

[node name="health" type="Label" parent="CanvasLayer/TextboxUp"]
offset_left = -112.0
offset_top = -10.0
offset_right = -72.0
offset_bottom = 13.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_o2ifi")
theme_override_font_sizes/font_size = 6
vertical_alignment = 1

[node name="Heart" type="Sprite2D" parent="CanvasLayer/TextboxUp"]
position = Vector2(-117, 1.90735e-06)
scale = Vector2(0.427083, 0.427083)
texture = ExtResource("7_diuud")

[node name="shieldbar" type="Label" parent="CanvasLayer/TextboxUp"]
offset_left = -65.0
offset_top = -10.0
offset_right = -25.0
offset_bottom = 13.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_o2ifi")
theme_override_font_sizes/font_size = 6
vertical_alignment = 1

[node name="shield" type="Sprite2D" parent="CanvasLayer/TextboxUp"]
position = Vector2(-70, 1.90735e-06)
scale = Vector2(0.427, 0.427)
texture = ExtResource("8_mx7f0")

[node name="manabar2" type="Label" parent="CanvasLayer/TextboxUp"]
offset_left = -35.876
offset_top = -10.0
offset_right = 4.12401
offset_bottom = 13.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_o2ifi")
theme_override_font_sizes/font_size = 6
vertical_alignment = 1

[node name="Mana2" type="Sprite2D" parent="CanvasLayer/TextboxUp"]
position = Vector2(-40.876, 1.90735e-06)
scale = Vector2(0.427, 0.427)
texture = ExtResource("9_v2ynp")

[node name="end turn" type="Label" parent="CanvasLayer/TextboxUp"]
offset_left = 79.0
offset_top = 65.0
offset_right = 147.0
offset_bottom = 88.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_o2ifi")
theme_override_font_sizes/font_size = 6
text = "end turn"

[node name="Hand" type="Node2D" parent="CanvasLayer"]

[node name="description" type="Label" parent="CanvasLayer/Hand"]
offset_left = 6.0
offset_top = 103.0
offset_right = 58.0
offset_bottom = 138.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_o2ifi")
theme_override_font_sizes/font_size = 4

[node name="player card drop" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player card drop"]
position = Vector2(128, 60)
shape = SubResource("RectangleShape2D_m3o6r")
debug_color = Color(0, 0.562919, 0.0779877, 0.42)
metadata/_edit_lock_ = true

[node name="cardslot1" parent="." instance=ExtResource("10_cglk2")]
position = Vector2(91, 132)
metadata/_edit_lock_ = true

[node name="cardslot2" parent="." instance=ExtResource("10_cglk2")]
position = Vector2(131, 132)
metadata/_edit_lock_ = true

[node name="cardslot3" parent="." instance=ExtResource("10_cglk2")]
position = Vector2(171, 132)
metadata/_edit_lock_ = true

[node name="cardslot4" parent="." instance=ExtResource("10_cglk2")]
position = Vector2(211, 132)
metadata/_edit_lock_ = true

[node name="end turn button" type="Button" parent="."]
offset_left = 201.0
offset_top = 68.0
offset_right = 256.0
offset_bottom = 92.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_s2f5b")
script = ExtResource("11_j4yij")
metadata/_edit_lock_ = true

[node name="end turn button2" type="Sprite2D" parent="end turn button"]
position = Vector2(128, 12)
texture = ExtResource("5_k2ix8")
metadata/_edit_lock_ = true

[node name="Thinking" type="Sprite2D" parent="."]
position = Vector2(106, 42)
texture = ExtResource("12_he2jp")

[node name="enemy_action" type="Label" parent="Thinking"]
offset_left = -5.0
offset_top = -4.0
offset_right = 1.0
offset_bottom = 2.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("6_o2ifi")
theme_override_font_sizes/font_size = 6

[node name="enemy2" parent="." instance=ExtResource("12_2134e")]
position = Vector2(128, 57)

[node name="enemy card drop" type="StaticBody2D" parent="enemy2" groups=["dropable"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy2/enemy card drop" groups=["dropable"]]
shape = SubResource("RectangleShape2D_2134e")
debug_color = Color(0.784314, 0, 0.00784314, 0.74902)

[connection signal="area_entered" from="player card drop" to="." method="_on_player_card_drop_area_entered"]
[connection signal="mouse_entered" from="end turn button" to="." method="_on_end_turn_button_mouse_entered"]
[connection signal="mouse_exited" from="end turn button" to="." method="_on_end_turn_button_mouse_exited"]
[connection signal="pressed" from="end turn button" to="." method="_on_end_turn_button_pressed"]
